--- a/index.html
+++ b/index.html
@@ -6,10 +6,15 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>TOP UC6 - Quiz</title>
+
+    <!-- Trocar -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Archivo+Black&family=Archivo+Narrow:ital,wght@0,400;0,700;1,400&display=swap" rel="stylesheet">
 </head>
 <body>
 
-    <header id="topo" class="senac no-print">
+    <header id="topo" class="senac no-print position-relative">
         <div class="header-tecnicos container">
         	  <h1 id="nome-curso">Técnico em Óptica</h1>
             <div id="logo-senac"><img src="img/logo-senac.png" alt="logo do senac"></div>
