Versão beta final 1.0

--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="pt-br">
 <head>
     <link rel="stylesheet" href="css/bootstrap.min.css">
+    <link rel="stylesheet" href="fa/css/all.min.css">
     <link rel="stylesheet" href="css/layout.css">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -24,22 +25,20 @@
 
     <div id="top-quiz">
         <div id="top-slides">
-            <div class="top-slide">
-                <div class="titulo">
-                    <h2>1. Técnica de lapidação</h2>
+        </div>
+        <div class="top-slide-final mt-5" style="display:none;">
+            <div class="pergunta pt-5 pb-5">
+                <p>O número de respostas corretas foi de:</p>
+                <p id="contador"><span id="acertos">0</span>/<span id="total">0</span></p>
+                <div class="mensagemfinal">
+                    
                 </div>
-                <div class="pergunta">
-                    <p>Qual é o propósito principal da técnica de lapidação na montagem de óculos semiaro?</p>
-                </div>
-                <div class="respostas">
-                    <button type="button" data-label="a" class="bto">Ajustar as hastes para ficarem firmes no rosto do usuário.</button>
-                    <button type="button" data-label="b" class="bto">Recortar as lentes no formato da armação escolhida. </button>
-                    <button type="button" data-label="c" class="bto">Alinhar a armação para que não fique frouxa no rosto do usuário.</button>
-                    <button type="button" data-label="d" class="bto">Preencher a ficha técnica com os dados de fabricação e montagem.</button>
-                </div>
+                <nav class="text-center pt-4">
+                    <button class="bto-nav-reiniciar" type="button">Reiniciar</button>
+                </nav>
             </div>
         </div>
-        <nav id="navegacao"> <!-- Sobe e desce quando necessário alem de aparecer e desaparecer -->
+        <nav id="navegacao" style="display: none;"> <!-- Sobe e desce quando necessário alem de aparecer e desaparecer -->
             <button class="bto-nav" type="button">Avançar</button>
         </nav>
     </div>
