Versão 1.0 sem audios

--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Archivo+Black&family=Archivo+Narrow:ital,wght@0,400;0,700;1,400&display=swap" rel="stylesheet">
 </head>
-<body>
-
+<body onLoad="Javascript:document.getElementById('sncloader').style.display='none';">
+    <div id='sncloader' class='over-loader'><div class="over-cell"><div id="sncload"></div></div></div>
     <header id="topo" class="senac no-print position-relative">
         <div class="header-tecnicos container">
         	  <h1 id="nome-curso">Técnico em Óptica</h1>
